nexus3/dump-ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1beta1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/proxy-body-size":"0"},"name":"nexus3-ingress","namespace":"nexus"},"spec":{"rules":[{"host":"nexus.fortytwobinary.com","http":{"paths":[{"backend":{"serviceName":"nexus","servicePort":8081},"path":"/"}]}},{"host":"docker.fortytwobinary.com","http":{"paths":[{"backend":{"serviceName":"nexus","servicePort":5000},"path":"/"}]} [...]
      nginx.ingress.kubernetes.io/proxy-body-size: "0"
    creationTimestamp: "2021-04-23T00:10:39Z"
    generation: 1
    managedFields:
    - apiVersion: networking.k8s.io/v1beta1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:cert-manager.io/cluster-issuer: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
            f:nginx.ingress.kubernetes.io/proxy-body-size: {}
        f:spec:
          f:rules: {}
          f:tls: {}
      manager: kubectl-client-side-apply
      operation: Update
      time: "2021-04-23T00:10:39Z"
    - apiVersion: networking.k8s.io/v1beta1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:loadBalancer:
            f:ingress: {}
      manager: nginx-ingress-controller
      operation: Update
      time: "2021-04-23T00:11:01Z"
    name: nexus3-ingress
    namespace: nexus
    resourceVersion: "6306612"
    uid: c55babaf-ed80-4d8b-b9ad-5435d1f52c2a
  spec:
    rules:
    - host: nexus.fortytwobinary.com
      http:
        paths:
        - backend:
            service:
              name: nexus
              port:
                number: 8081
          path: /
          pathType: ImplementationSpecific
    - host: docker.fortytwobinary.com
      http:
        paths:
        - backend:
            service:
              name: nexus
              port:
                number: 5000
          path: /
          pathType: ImplementationSpecific
    tls:
    - hosts:
      - docker.fortytwobinary.com
      - nexus.fortytwobinary.com
      secretName: nexus-prod-tls
  status:
    loadBalancer:
      ingress:
      - ip: 192.168.1.14
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
